--- a/STM32_Neo6M/STM32_Neo6M.ioc
+++ b/STM32_Neo6M/STM32_Neo6M.ioc
@@ -1,108 +1,128 @@
 #MicroXplorer Configuration settings - do not modify
-File.Version=6
-KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+ProjectManager.MainLocation=Core/Src
+RCC.MCOFreq_Value=72000000
+ProjectManager.ProjectFileName=STM32_Neo6M.ioc
+USART2.IPParameters=VirtualMode
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+ProjectManager.KeepUserCode=true
+PA10.Mode=Asynchronous
+Mcu.UserName=STM32F103C8Tx
+Mcu.PinsNb=10
+ProjectManager.NoMain=false
+USART1.BaudRate=9600
+RCC.PLLCLKFreq_Value=72000000
+PA9.GPIO_Label=GPS_RX
+PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true
+PA9.GPIOParameters=GPIO_Label
+PC13-TAMPER-RTC.Signal=GPIO_Output
+RCC.ADCFreqValue=36000000
+PA3.GPIOParameters=GPIO_Label
+ProjectManager.DefaultFWLocation=true
+PD0-OSC_IN.Signal=RCC_OSC_IN
+ProjectManager.DeletePrevious=true
+USART1.IPParameters=VirtualMode,BaudRate
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+NVIC.USART2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+PA2.GPIOParameters=GPIO_Label
+PinOutPanel.RotationAngle=0
+RCC.FamilyName=M
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+ProjectManager.StackSize=0x400
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
+PA13.Signal=SYS_JTMS-SWDIO
+PA3.Mode=Asynchronous
+Mcu.IP4=USART2
+RCC.FCLKCortexFreq_Value=72000000
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP2=SYS
 Mcu.IP3=USART1
-Mcu.IPNb=4
-Mcu.Name=STM32F103C(8-B)Tx
-Mcu.Package=LQFP48
+Mcu.IP0=NVIC
+PA9.Mode=Asynchronous
+Mcu.IP1=RCC
+Mcu.UserConstants=
+ProjectManager.TargetToolchain=STM32CubeIDE
+Mcu.ThirdPartyNb=0
+RCC.HCLKFreq_Value=72000000
+Mcu.IPNb=5
+ProjectManager.PreviousToolchain=
+RCC.APB2TimFreq_Value=72000000
+PA9.Signal=USART1_TX
+Mcu.Pin6=PA10
+Mcu.Pin7=PA13
+ProjectManager.RegisterCallBack=
+PC13-TAMPER-RTC.Locked=true
+Mcu.Pin8=PA14
+RCC.USBFreq_Value=72000000
+Mcu.Pin9=VP_SYS_VS_Systick
+RCC.AHBFreq_Value=72000000
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
+PD0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA9
-Mcu.Pin4=PA10
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
-Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
-Mcu.UserName=STM32F103C8Tx
-MxCube.Version=6.1.1
-MxDb.Version=DB.6.0.10
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA9
+ProjectManager.ProjectBuild=false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+board=custom
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+ProjectManager.LastFirmware=true
+PC13-TAMPER-RTC.GPIO_Label=LED
+RCC.PLLMUL=RCC_PLL_MUL9
+RCC.VCOOutput2Freq_Value=8000000
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
+MxDb.Version=DB.6.0.21
+RCC.APB2Freq_Value=72000000
+ProjectManager.BackupPrevious=false
+MxCube.Version=6.2.1
+PA14.Mode=Serial_Wire
+File.Version=6
+VP_SYS_VS_Systick.Mode=SysTick
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=GPS_TX
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
-PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
-PA14.Signal=SYS_JTCK-SWCLK
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
-PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
-PC13-TAMPER-RTC.GPIO_Label=LED
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.Signal=GPIO_Output
-PD0-OSC_IN.Mode=HSE-External-Oscillator
-PD0-OSC_IN.Signal=RCC_OSC_IN
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
-PD1-OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=6
-ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F103C8Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
 ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
-ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
-ProjectManager.MainLocation=Core/Src
-ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
-ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=STM32_Neo6M.ioc
-ProjectManager.ProjectName=STM32_Neo6M
-ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=STM32CubeIDE
-ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
-RCC.ADCFreqValue=36000000
-RCC.AHBFreq_Value=72000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
-RCC.APB2Freq_Value=72000000
-RCC.APB2TimFreq_Value=72000000
-RCC.FCLKCortexFreq_Value=72000000
-RCC.FamilyName=M
-RCC.HCLKFreq_Value=72000000
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=72000000
+ProjectManager.AskForMigrate=true
+Mcu.Name=STM32F103C(8-B)Tx
+ProjectManager.HalAssertFull=false
+PA2.Signal=USART2_TX
+ProjectManager.ProjectName=STM32_Neo6M
+ProjectManager.UnderRoot=true
 RCC.PLLMCOFreq_Value=36000000
-RCC.PLLMUL=RCC_PLL_MUL9
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+ProjectManager.CoupleFile=false
 RCC.SYSCLKFreq_VALUE=72000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+Mcu.Package=LQFP48
 RCC.TimSysFreq_Value=72000000
-RCC.USBFreq_Value=72000000
-RCC.VCOOutput2Freq_Value=8000000
-USART1.IPParameters=VirtualMode
+NVIC.ForceEnableDMAVector=true
+KeepUserPlacement=false
+USART2.VirtualMode=VM_ASYNC
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 USART1.VirtualMode=VM_ASYNC
-VP_SYS_VS_Systick.Mode=SysTick
+ProjectManager.CompilerOptimize=6
+ProjectManager.ToolChainLocation=
+PA2.GPIO_Label=DEBUG_TX
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-board=custom
+PA10.Signal=USART1_RX
+PA14.Signal=SYS_JTCK-SWCLK
+ProjectManager.HeapSize=0x200
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+ProjectManager.ComputerToolchain=false
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+RCC.APB1TimFreq_Value=72000000
+PA2.Mode=Asynchronous
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+RCC.APB1Freq_Value=36000000
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DeviceId=STM32F103C8Tx
+ProjectManager.LibraryCopy=1
+PA3.GPIO_Label=DEBUG_RX
+PA3.Signal=USART2_RX
 isbadioc=false
