--- a/STM32_Neo6M/STM32_Neo6M.ioc
+++ b/STM32_Neo6M/STM32_Neo6M.ioc
@@ -4,7 +4,7 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 ProjectManager.MainLocation=Core/Src
 RCC.MCOFreq_Value=72000000
 ProjectManager.ProjectFileName=STM32_Neo6M.ioc
-USART2.IPParameters=VirtualMode
+USART2.IPParameters=VirtualMode,BaudRate
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 ProjectManager.KeepUserCode=true
 PA10.Mode=Asynchronous
@@ -15,7 +15,7 @@ USART1.BaudRate=9600
 RCC.PLLCLKFreq_Value=72000000
 PA9.GPIO_Label=GPS_RX
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
 PA9.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.Signal=GPIO_Output
 RCC.ADCFreqValue=36000000
@@ -27,6 +27,7 @@ USART1.IPParameters=VirtualMode,BaudRate
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 NVIC.USART2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 PA2.GPIOParameters=GPIO_Label
+USART2.BaudRate=9600
 PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
